--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,10 @@
 {
+	"Тестовый пример": "Тестовый пример",
 	"Перевод": "Перевод",
 	"Главная страница": "Главная страница",
-	"Язык": "Перевод"
+	"Язык": "Русский",
+	"Страница не найдена": "Страница не найдена",
+	"Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+	"Обновить страницу": "Обновить страницу",
+	"throw error": "throw error"
 }
