--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,13 +1,12 @@
 {
-  "Тестовый пример": "Test example",
-  "Перевод": "Translate",
-  "Главная страница": "Main page",
-  "Язык": "English",
-  "новый перевод": "новый перевод",
-  "Страница не найдена": "Page not found",
-  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-  "Обновить страницу": "Reload page",
-  "throw error": "throw error",
-  "Главная": "Main",
-  "О сайте": "About us"
+	"throw error": "throw error",
+	"Главная": "Main",
+	"Главная страница": "Main page",
+	"О сайте": "About us",
+	"Обновить страницу": "Reload page",
+	"Перевод": "Translate",
+	"Переключить": "Switch",
+	"Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+	"Страница не найдена": "Page not found",
+	"Язык": "English"
 }
