--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,13 +1,12 @@
 {
-  "Тестовый пример": "Тестовый пример",
-  "Перевод": "Перевод",
-  "Главная страница": "Главная страница",
-  "Язык": "Русский",
-  "новый перевод": "новый перевод",
-  "Страница не найдена": "Страница не найдена",
-  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-  "Обновить страницу": "Обновить страницу",
-  "throw error": "throw error",
-  "Главная": "Главная",
-  "О сайте": "О сайте"
+	"throw error": "throw error",
+	"Главная": "Главная",
+	"Главная страница": "Главная страница",
+	"О сайте": "О сайте",
+	"Обновить страницу": "Обновить страницу",
+	"Перевод": "Перевод",
+	"Переключить": "Переключить",
+	"Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+	"Страница не найдена": "Страница не найдена",
+	"Язык": "Русский"
 }
