upgrade sidebar, add button themes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,12 +1,13 @@
 {
 	"throw error": "throw error",
-	"Главная": "Main",
+	"Главная": "Main page",
 	"Главная страница": "Main page",
 	"О сайте": "About us",
 	"Обновить страницу": "Reload page",
 	"Перевод": "Translate",
 	"Переключить": "Switch",
-	"Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+	"Произошла непредвиденная ошибка": "An unexpected error occurred",
 	"Страница не найдена": "Page not found",
-	"Язык": "English"
+	"Язык": "English",
+	"Короткий язык": "EN"
 }
