add modal, portal, change header

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,13 +1,14 @@
 {
-	"throw error": "throw error",
-	"Главная": "Main page",
-	"Главная страница": "Main page",
-	"О сайте": "About us",
-	"Обновить страницу": "Reload page",
-	"Перевод": "Translate",
-	"Переключить": "Switch",
-	"Произошла непредвиденная ошибка": "An unexpected error occurred",
-	"Страница не найдена": "Page not found",
-	"Язык": "English",
-	"Короткий язык": "EN"
+  "throw error": "throw error",
+  "Войти": "",
+  "Главная": "Main page",
+  "Главная страница": "Main page",
+  "Короткий язык": "EN",
+  "О сайте": "About us",
+  "Обновить страницу": "Reload page",
+  "Перевод": "Translate",
+  "Переключить": "Switch",
+  "Произошла непредвиденная ошибка": "An unexpected error occurred",
+  "Страница не найдена": "Page not found",
+  "Язык": "English"
 }
