--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,13 +1,14 @@
 {
-	"throw error": "throw error",
-	"Главная": "Главная",
-	"Главная страница": "Главная страница",
-	"О сайте": "О сайте",
-	"Обновить страницу": "Обновить страницу",
-	"Перевод": "Перевод",
-	"Переключить": "Переключить",
-	"Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-	"Страница не найдена": "Страница не найдена",
-	"Язык": "Русский",
-	"Короткий язык": "RU"
+  "throw error": "throw error",
+  "Войти": "Войти",
+  "Главная": "Главная",
+  "Главная страница": "Главная страница",
+  "Короткий язык": "RU",
+  "О сайте": "О сайте",
+  "Обновить страницу": "Обновить страницу",
+  "Перевод": "Перевод",
+  "Переключить": "Переключить",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Страница не найдена": "Страница не найдена",
+  "Язык": "Русский"
 }
